[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gui/message.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/gameover.png" type="Texture" id=2]
[ext_resource path="res://assets/font/flappy_bird_font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/management/interface.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animation/background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("animation/background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("animation/background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Interface" type="CanvasLayer" groups=["interface"]]
script = ExtResource( 4 )

[node name="message_container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="message" type="Button" parent="message_container"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="texture" type="TextureButton" parent="message_container/message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -133.5
margin_right = 92.0
margin_bottom = 133.5
mouse_filter = 2
texture_normal = ExtResource( 1 )

[node name="game_over" type="Button" parent="message_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="texture" type="TextureButton" parent="message_container/game_over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -133.5
margin_right = 92.0
margin_bottom = 133.5
mouse_filter = 2
texture_normal = ExtResource( 2 )

[node name="score_container" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="text" type="Label" parent="score_container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="background" type="ColorRect" parent="animation"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
